[gd_scene load_steps=2 format=3 uid="uid://settings_menu_001"]

[ext_resource type="Script" path="res://src/ui/settings_menu.gd" id="1_script"]

[node name="SettingsMenu" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="VolumeRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeLabel" type="Label" parent="Panel/VBox/VolumeRow"]
layout_mode = 2
text = "Master"

[node name="Volume" type="HSlider" parent="Panel/VBox/VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Fullscreen" type="CheckBox" parent="Panel/VBox"]
layout_mode = 2
text = "Fullscreen"

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Back" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"
